Eventing JAXWS, first cut. Added Support for client side reconfiguration
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/trunk/jbossws-core@1994 50344849-fb0f-0410-a53f-a94597aac05c